# idu

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  TODO.md  db.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  manage.py  pyproject.toml  setup.py
.github/: auto-release.yml
.github/workflows/: auto-release.yml  test-app.yml
api/: apps.py  urls.py  views.py
api/management/commands/: populate_vectordb.py
api/templates/: extract_entities.html
idu_django/: asgi.py  settings.py  urls.py  wsgi.py
src/: constants.py  main.py  models.py
src/api/: base_router.py  health.py
src/api/endpoints/: extract_entities.py
src/core/: orchestrator.py
src/llm/: llm.py  prompts.py
src/schemas/: api.py  env_variables.py  ocr.py
src/services/ocr/: base.py  ocr.py  olmo_ocr_impl.py  tesseract_impl.py
src/services/vector_db/: base.py  chroma_impl.py  vector_db.py
src/utils/: dataset_preparation.py  env_helper.py  file_processing.py  logging_helper.py
tests/integration/: test_extract_entities.py
tests/unit/core/: test_orchestrator.py
tests/unit/llm/: test_prompts.py
tests/unit/services/ocr/: test_ocr.py  test_olmo_orc_impl.py  test_tesseract_impl.py
tests/unit/services/vector_db/: test_base.py  test_chroma_impl.py  test_vector_db.py
tests/unit/utils/: test_file_processing.py  test_logging_helper.py
